<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Zoo" >
	
	<LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".LinearLayout" >

		

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >

			<TextView
			    android:id="@+id/textView1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:minWidth="100dp"
			    android:text="@string/game_label"
			    android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
			    android:id="@+id/game"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/game"
			   	android:textAppearance="?android:attr/textAppearanceMedium" />

		</LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:minWidth="100dp"
	            android:text="@string/play_label"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <TextView
	            android:id="@+id/play"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/play"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:minWidth="100dp"
	            android:text="@string/eat_label"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <TextView
	            android:id="@+id/eat"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/eat"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:minWidth="100dp"
	            android:text="@string/bath_label"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <TextView
	            android:id="@+id/bath"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/bath"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:paddingTop="25dp" >

	        <Button
	            android:id="@+id/play_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="callbackPlay"
	            android:text="@string/play_button" />

	        <Button
	            android:id="@+id/eat_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="callbackEat"
	            android:text="@string/eat_button" />

	        <Button
	            android:id="@+id/bath_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="callbackBath"
	            android:text="@string/bath_button" />

	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:paddingBottom="25dp" >

	        <Button
	            android:id="@+id/restart_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="callbackRestart"
	            android:text="@string/restart_button" />
	    </LinearLayout>
	 
	 </LinearLayout>
    
</RelativeLayout>
